<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#D8D8D8"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Choose_time"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:text="Alarm Add"
            android:textColor="#FFFF00"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="#2E9AFE"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:background="#D8D8D8"
            android:layout_weight="0.98">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/hour"
                android:gravity="center"
                android:layout_marginRight="33dp"
                android:layout_marginEnd="33dp"
                android:hint="hours"
                android:textAlignment="center"
                android:textSize="38dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/textView2"
                android:layout_toStartOf="@+id/textView2"
                android:textStyle="bold"
                android:background="@null"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/minute"
                android:gravity="center"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:hint="mins"
                android:textSize="38dp"
                android:textAlignment="center"
                android:layout_alignTop="@+id/hour"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:textStyle="bold"
                android:background="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=":"
                android:id="@+id/textView2"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Confirm"
                android:id="@+id/confirm"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFF00"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="#2E9AFE"/>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/time_not_valid"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            android:textColor="#2E9AFE"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView11"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/time_string_animation"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView14"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>